Bug #17179  	schema creation fails -flag was set on field intable share instead of table